# src/ai/dto/generic-prompt.response.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class GenericPromptResponseDto {
+  @ApiProperty()
+  text!: string;
+
+  @ApiProperty()
+  cacheHit!: boolean;
+}
